Add free label to essentials pricing

--- a/index.html
+++ b/index.html
@@ -1880,6 +1880,9 @@
         </div>
         <h3>Le Rempart</h3>
         <p class="pricing-card__subtitle">Essentials</p>
+        <div class="pricing-card__price">
+          <span class="pricing-card__amount">Free</span>
+        </div>
         <div class="pricing-divider"></div>
         <ul class="pricing-features">
           <li>Up to 5 clients</li>
