--- a/index.html
+++ b/index.html
@@ -963,6 +963,12 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  transition: transform 0.2s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.2s cubic-bezier(0.22, 1, 0.36, 1);
+}
+
+.pricing-card:hover{
+  transform: translateY(-6px);
+  box-shadow: 0 24px 44px rgba(15,23,42,.14);
 }
 
 .pricing-card__badge{
@@ -1083,6 +1089,10 @@
 
 .pricing-card--featured{
   transform: translateY(-10px);
+}
+
+.pricing-card--featured:hover{
+  transform: translateY(-16px);
 }
 
 .pricing-card--featured .pricing-card__cta{
