--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
   border-radius: 26px;
   padding: 34px 30px 30px;
   border: 2px solid var(--pricing-accent);
-  box-shadow: 0 18px 36px rgba(15,23,42,.08);
+  box-shadow: 0 16px 32px rgba(15,23,42,.08);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -968,7 +968,7 @@
 
 .pricing-card:hover{
   transform: translateY(-6px);
-  box-shadow: 0 24px 44px rgba(15,23,42,.14);
+  box-shadow: 0 22px 40px rgba(15,23,42,.12);
 }
 
 .pricing-card__badge{
@@ -1069,7 +1069,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  color: #9ca3af;
+  color: #b0b7c1;
   font-weight: 700;
 }
 
@@ -1093,11 +1093,12 @@
 
 .pricing-card--featured{
   transform: translateY(-10px);
-  box-shadow: 0 22px 42px rgba(15,23,42,.12);
+  box-shadow: 0 18px 36px rgba(15,23,42,.09);
 }
 
 .pricing-card--featured:hover{
   transform: translateY(-16px);
+  box-shadow: 0 25px 44px rgba(15,23,42,.13);
 }
 
 .pricing-card--featured .pricing-card__cta{
@@ -1109,6 +1110,7 @@
 .pricing-card--rempart{--pricing-accent:#d1d5db;}
 .pricing-card--pieter{--pricing-accent:#22c55e;}
 .pricing-card--morne{--pricing-accent:#0ea5e9;}
+.pricing-card--rempart .pricing-card__cta{color:#6b7280;}
 
 @media (max-width: 900px){
   .pricing-grid{
