--- a/index.html
+++ b/index.html
@@ -999,8 +999,8 @@
 .pricing-card__icon img{
   width: 58px;
   height: 58px;
-  opacity: .7;
-  filter: grayscale(1) brightness(0);
+  opacity: .78;
+  filter: grayscale(1) saturate(.7);
 }
 
 .pricing-card h3{
