--- a/tarifs.html
+++ b/tarifs.html
@@ -1008,7 +1008,7 @@
 
         <div class="price-grid">
           <article class="price-card">
-            <h3>Le Pouce – Essentials</h3>
+            <h3>Le Rempart – Essentials</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
               <span data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span></br>
@@ -1042,7 +1042,7 @@
           </article>
 
           <article class="price-card price-card--green">
-            <h3>Pieter Both – Pro</h3>
+            <h3>Le Pieter – Pro</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
               <span data-monthly="Rs 630" data-annual="Rs 6,300">Rs 6,300</span></br>
@@ -1131,9 +1131,9 @@
             <thead>
               <tr>
                 <th class="comparison-feature-head"></th>
-                <th class="comparison-plan comparison-plan--free" style=" border-top: 1px solid #e5e6ea; ">Le Pouce – Essentials</th>
-                <th class="comparison-plan comparison-plan--pro" style=" border-top: 1px solid #0fa4e8; ">Pieter Both – Pro</th>
-                <th class="comparison-plan comparison-plan--enterprise" style=" border-top: 1px solid #23c45f; ">Le Morne – Enterprise</th>
+                <th class="comparison-plan comparison-plan--free" style=" border-top: 1px solid #e5e6ea; ">Le Rempart – Essentials</th>
+                <th class="comparison-plan comparison-plan--pro" style=" border-top: 1px solid #0fa4e8; ">Le Pieter – Pro</th>
+                <th class="comparison-plan comparison-plan--enterprise" style=" border-top: 1px solid #23c45f; ">Le Morne – Entreprise </th>
               </tr>
             </thead>
             <tbody class="comparison-section">
