--- a/tarifs.html
+++ b/tarifs.html
@@ -1020,24 +1020,15 @@
             <div class="divider"></div>
             <div class="feature-heading">FREE PLAN INCLUDES</div>
             <ul class="feature-list">
-              <li>5 Clients + Unlimited Invoicing</li>
-              <li>4 Professional Invoice Templates</li>
+              <li>Limit 5 Clients </li>
+              <li>Unlimited Invoicing & Quotations</li>
               <li>Brand Invoices with Your Logo</li>
-              <li>Accept Payments Online with a Click</li>
-              <li>Auto-Billing & Recurring Invoices</li>
-              <li>Product Item Library Management</li>
-              <li>Inventory Management</li>
-              <li>Create Projects & Track Billable Time</li>
-              <li>Manage Projects with Kanban Boards</li>
-              <li>Setup Vendors & Track Expenses</li>
+              <li>Articles & Clients Management</li>
               <li>Taxes per Line-item or Invoice Total</li>
-              <li>Alerts when Invoices are Viewed & Paid</li>
-              <li>Client-Side Invoice & Payment Portal</li>
               <li>Accept Deposits & Partial Payments</li>
-              <li>Real-time Invoice .PDF Creation</li>
-              <li>Setup Credit Card Gateway Fees</li>
-              <li>Invoice Email Delivery Statistics</li>
-              <li>Automatic Currency Conversions</li>
+              <li>Send Invoices by Email or Whatsapp</li>
+              <li>Payment management</li>
+
             </ul>
           </article>
 
@@ -1054,24 +1045,14 @@
             <div class="divider"></div>
             <div class="feature-heading">ALL FREE FEATURES +</div>
             <ul class="feature-list feature-list--tight">
-              <li>Unlimited Clients & Invoices</li>
-              <li>Remove “Created by Facture.mu”</li>
-              <li>Email Invoices via Gmail & MSN</li>
-              <li>Email Invoices via your custom SMTP</li>
-              <li>Branded URL: “YourSite”.invoicing.co</li>
-              <li>11 Professional Invoice Templates</li>
-              <li>Customize Invoice Designs</li>
-              <li>API Integration with 3rd Party Apps</li>
-              <li>Password Protect Client-Side Portal</li>
-              <li>Set Up Auto-Reminder Emails</li>
+              <li>All Le Pouce + :</li>
+              <li>Unlimited Clients</li>
+              <li>Hide “Created by Facture.mu”</li>
+              <li>Auto-Reminders</li>
+              <li>10 Professional Invoice Templates</li>
               <li>Auto-Attached Invoice PDF to Emails</li>
-              <li>Display Clients E-Signature on Invoices</li>
-              <li>Enable an ‘Approve Terms’ Checkbox</li>
-              <li>Reports: Invoices, Expenses, P&amp;L, more</li>
-              <li>Bulk Email Invoices, Quotes, Credits</li>
-              <li>Interlink 10 Companies with 1 Login</li>
-              <li>Create Unique “Client Group” Settings</li>
-              <li>Auto Sales Tax Calculation (US States)</li>
+              <li>Reports</li>
+            
             </ul>
           </article>
 
@@ -1088,12 +1069,12 @@
             <div class="divider"></div>
             <div class="feature-heading">ALL PRO FEATURES+</div>
             <ul class="feature-list">
-              <li>Add Account Users (up to 50!) &amp; Set Access Permissions per User</li>
-              <li>Attach Files to Emails &amp; Client-Portal (pdf, jpg, ppt, xls, docs &amp; more)</li>
-              <li>Branded Client Portal: “Billing.YourCompany.com”</li>
-              <li>Integrate &amp; Sync Bank Accounts via Yodlee or GoCardless Banking</li>
-              <li>e-Invoicing, UBL format invoices, PEPPOL Network Access*</li>
-              <li>*PEPPOL credits 250 included! Additional PEPPOL credits are Rs 2,250/500 or Rs 4,500/1000 valid for 1-year from purchase.</li>
+              <li>All Pieter Both + :</li>
+              <li>Multi-users (up to 50!) </li>
+              <li>Permissions per User</li>
+              <li>Attach Files to Emails</li>
+              <li>(pdf, jpg, ppt, xls, docs & more)</li>
+              <li>API Access</li>
             </ul>
           </article>
 
