--- a/tarifs.html
+++ b/tarifs.html
@@ -1036,7 +1036,7 @@
             <h3>Le Pieter – Pro</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="Rs 630" data-annual="Rs 6,300">Rs 6,300</span></br>
+              <span data-monthly="9,9€" data-annual="99€">9,9€</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="per year with an annual plan!">per year with an annual plan!</span>
             </div>
             <div class="price-action">
