--- a/tarifs.html
+++ b/tarifs.html
@@ -1060,7 +1060,7 @@
             <h3>Le Morne – Enterprise</h3>
             <p>Pay annually for 10 months + 2 months free!</p>
             <div class="price-amount">
-              <span data-monthly="Rs 810" data-annual="Rs 8,100">Rs 8,100</span></br>
+              <span data-monthly="19,9€" data-annual="199€">19,9€</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
