--- a/tarifs.html
+++ b/tarifs.html
@@ -1011,7 +1011,7 @@
             <h3>Le Rempart – Essentials</h3>
             <p>Yes, it's really free 🙂</p>
             <div class="price-amount">
-              <span data-monthly="Rs 0" data-annual="Rs 0">Rs 0</span></br>
+              <span data-monthly="0€" data-annual="0€">0€</span></br>
               <span class="price-term" data-monthly="Per month" data-annual="Per year">Per year</span>
             </div>
             <div class="price-action">
