--- a/index.html
+++ b/index.html
@@ -1896,7 +1896,7 @@
           <img src="1.svg" alt="Le Rempart">
         </div>
         <h3>Le Rempart</h3>
-        <p class="pricing-card__subtitle">Essentials</p>
+        <h3>Le Pieter <span class="pricing-card__tag">– Pro</span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount">Free</span>
         </div>
