--- a/index.html
+++ b/index.html
@@ -1895,8 +1895,7 @@
         <div class="pricing-card__icon">
           <img src="1.svg" alt="Le Rempart">
         </div>
-        <h3>Le Rempart</h3>
-        <h3>Le Pieter <span class="pricing-card__tag">– Pro</span></h3>
+        <h3>Le Rempart <span class="pricing-card__tag">– Essentials</span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount">Free</span>
         </div>
