--- a/index.html
+++ b/index.html
@@ -988,14 +988,17 @@
   width: 96px;
   height: 96px;
   border-radius: 50%;
+  background: #f9fafb;
   display: grid;
   place-items: center;
   margin-bottom: 20px;
+  border: 1px solid #eef2f7;
+  box-shadow: inset 0 1px 2px rgba(0,0,0,.05);
 }
 
 .pricing-card__icon img{
-  width: 158px;
-  height: 158px;
+  width: 58px;
+  height: 58px;
   opacity: .78;
   filter: grayscale(1) saturate(.7);
 }
