--- a/index.html
+++ b/index.html
@@ -985,8 +985,8 @@
 }
 
 .pricing-card__icon{
-  width: 196px;
-  height: 196px;
+  width: 156px;
+  height: 156px;
   border-radius: 50%;
   display: grid;
   place-items: center;
@@ -1890,9 +1890,9 @@
     <div class="pricing-grid">
       <article class="pricing-card pricing-card--rempart">
         <div class="pricing-card__icon">
-          <img src="1.svg" alt="Le Rempart">
+          <img src="1.svg" alt="Start">
         </div>
-        <h3>Le Rempart <span class="pricing-card__tag">– Essentials</span></h3>
+        <h3>Start<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount">Free</span>
         </div>
@@ -1908,9 +1908,9 @@
       <article class="pricing-card pricing-card--pieter pricing-card--featured">
         <div class="pricing-card__badge">Most Popular</div>
         <div class="pricing-card__icon">
-          <img src="2.svg" alt="Le Pieter">
+          <img src="2.svg" alt="Grow">
         </div>
-        <h3>Le Pieter <span class="pricing-card__tag">– Pro</span></h3>
+        <h3>Grow<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount" data-monthly="9,9" data-annual="99">9,9€</span>
           <span class="pricing-card__term" data-monthly="month" data-annual="year">/ month</span>
@@ -1926,9 +1926,9 @@
 
       <article class="pricing-card pricing-card--morne">
         <div class="pricing-card__icon">
-          <img src="3.svg" alt="Le Morne">
+          <img src="3.svg" alt="Scale">
         </div>
-        <h3>Le Morne <span class="pricing-card__tag">– Enterprise</span></h3>
+        <h3>Scale<span class="pricing-card__tag"></span></h3>
         <div class="pricing-card__price">
           <span class="pricing-card__amount" data-monthly="19,9" data-annual="199">19,9€</span>
           <span class="pricing-card__term" data-monthly="month" data-annual="year">/ month</span>
