--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
 .pricing-card__icon{
   width: 156px;
   height: 156px;
+  background: #27060408;
   border-radius: 50%;
   display: grid;
   place-items: center;
