Hide testimonials section

--- a/index.html
+++ b/index.html
@@ -1796,7 +1796,7 @@
   </div>
 </section>
 
-<section class="testimonials-section">
+<section class="testimonials-section" hidden>
   <div class="container">
 
     <div class="testimonials-header">
