--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
 }
 
 .func-list{
-  background: #dbeafe;
+  background: #f3f3f3;
   border-radius: 22px;
   padding: 18px;
   display: flex;
@@ -669,7 +669,7 @@
   padding: 18px 18px;
   font-weight: 600;
   font-size: 15px;
-  color: #1e3a8a;
+  color: #0e1b2c;
   border-radius: 14px;
   cursor: pointer;
   transition: background .2s;
