--- a/tarifs.html
+++ b/tarifs.html
@@ -982,8 +982,8 @@
             </div>
           </div>
 
-          <a class="link-btn" href="https://facture.mu/login" target="_blank" rel="noopener noreferrer">Se connecter</a>
-          <a class="btn" href="https://facture.mu/register" target="_blank" rel="noopener noreferrer">Créer un compte</a>
+          <a class="link-btn" href="https://app.facture.mu/login" target="_blank" rel="noopener noreferrer">Se connecter</a>
+          <a class="btn" href="https://app.facture.mu/register" target="_blank" rel="noopener noreferrer">Créer un compte</a>
         </div>
       </div>
     </div>
@@ -1367,7 +1367,7 @@
       const registerButtons = document.querySelectorAll('[data-register-cta]');
       registerButtons.forEach(btn => {
         btn.addEventListener('click', () => {
-          window.open('https://facture.mu/register', '_blank', 'noopener,noreferrer');
+          window.open('https://app.facture.mu/register', '_blank', 'noopener,noreferrer');
         });
       });
 
