--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
   border-color: transparent;
 }
 
-.pricing-card--rempart{--pricing-accent:#d1d5db;}
+.pricing-card--rempart{--pricing-accent:#ebab0570;}
 .pricing-card--pieter{--pricing-accent:#22c55e;}
 .pricing-card--morne{--pricing-accent:#0ea5e9;}
 .pricing-card--rempart .pricing-card__cta{color:#6b7280;}
