--- a/tarifs.html
+++ b/tarifs.html
@@ -433,7 +433,7 @@
     }
 
     .price-card{
-      border: 1px solid #d1d5db;
+      border: 1px solid #ebab0570;
       border-radius: 14px;
       padding: 26px 22px 24px;
       background: #fff;
