--- a/intro.html
+++ b/intro.html
@@ -36,6 +36,12 @@
       height:180px;
     }
 
+    .screens-image{
+      width:min(90vw, 720px);
+      height:auto;
+      display:block;
+    }
+
     h1{
       margin:0;
       font-size:clamp(32px, 6vw, 56px);
@@ -46,6 +52,7 @@
 <body>
   <main class="coming-soon" aria-label="Coming soon">
     <div class="logo-animation" data-animation="2.json" role="img" aria-label="Logo"></div>
+    <img class="screens-image" src="screens.png" alt="Screens preview">
     <h1>Coming soon</h1>
   </main>
 
@@ -56,7 +63,7 @@
       lottie.loadAnimation({
         container,
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
         path: container.dataset.animation || '2.json',
       });
