--- a/intro.html
+++ b/intro.html
@@ -27,13 +27,14 @@
       display:flex;
       flex-direction:column;
       align-items:center;
-      gap:24px;
+      gap:12px;
       text-align:center;
     }
 
     .logo-animation{
       width:180px;
       height:180px;
+      margin-top:-20px;
     }
 
     .screens-image{
