--- a/conditions-generales-utilisation.html
+++ b/conditions-generales-utilisation.html
@@ -1841,8 +1841,8 @@
       <div class="footer-column">
         <h4>Société</h4>
         <a href="#">Contact</a>
-        <a href="conditions-generales-utilisation.html">Conditions</a>
-        <a href="donnees-personnelles.html">Traitement des données personnelles</a>
+        <a href="#">Conditions</a>
+        <a href="#">Confidentialité</a>
       </div>
 
       <div class="footer-column">
