--- a/index.html
+++ b/index.html
@@ -1097,17 +1097,6 @@
   box-shadow: 0 10px 18px rgba(15,23,42,.12);
 }
 
-.pricing-card__more{
-  grid-column: 2;
-  margin-top: 50px;
-  display: flex;
-  justify-content: center;
-}
-
-.pricing-card__more .pricing-card__cta{
-  width: 100%;
-}
-
 .pricing-card--featured{
   box-shadow: 0 18px 36px rgba(15,23,42,.09);
 }
@@ -1134,10 +1123,6 @@
 
   .pricing-card--featured{
     transform: none;
-  }
-
-  .pricing-card__more{
-    grid-column: 1;
   }
 }
 
@@ -1943,11 +1928,8 @@
           <li>Automatic reminders</li>
         </ul>
         <button class="pricing-card__cta" type="button" data-register-cta>Sign up</button>
-      </article>
-
-      <div class="pricing-card__more">
         <a class="pricing-card__cta" href="tarifs.html">Voir plus</a>
-      </div>
+      </article>
 
       <article class="pricing-card pricing-card--morne">
         <div class="pricing-card__icon">
@@ -2375,8 +2357,8 @@ animation.addEventListener('DOMLoaded', () => {
       <div class="footer-column">
         <h4>Société</h4>
         <a href="#">Contact</a>
-        <a href="conditions-generales-utilisation.html">Conditions</a>
-        <a href="donnees-personnelles.html">Traitement des données personnelles</a>
+        <a href="#">Conditions</a>
+        <a href="#">Confidentialité</a>
       </div>
 
       <div class="footer-column">
