Fix nav links to index sections

--- a/donnees-personnelles.html
+++ b/donnees-personnelles.html
@@ -1639,9 +1639,9 @@
       </button>
 
       <nav aria-label="Navigation">
-        <a href="#fonctionnalites">Fonctionnalités</a>
+        <a href="index.html#fonctionnalites">Fonctionnalités</a>
         <a href="tarifs.html">Tarifs</a>
-        <a href="#faq">FAQ</a>
+        <a href="index.html#faq">FAQ</a>
       </nav>
 
       <div class="actions">
