--- a/index.html
+++ b/index.html
@@ -2415,6 +2415,6 @@ animation.addEventListener('DOMLoaded', () => {
   </div>
 </footer>
 
-
+<script src="https://tomos.bot/embed.js" data-empresa="tomos" data-bot="app-facture-mu"></script>
 </body>
 </html>
