--- a/index.html
+++ b/index.html
@@ -1596,7 +1596,6 @@
 
 
 <body>
-<script src="https://tomos.bot/embed.js" data-empresa="tomos" data-bot="app-facture-mu"></script>
 
 <header>
   <div class="container">
@@ -2415,6 +2414,12 @@ animation.addEventListener('DOMLoaded', () => {
     </div>
   </div>
 </footer>
+<script
+  src="https://tomos.bot/embed.js"
+  data-empresa="tomos"
+  data-bot="app-facture-mu"
+  data-floating="true">
+</script>
 
 </body>
 </html>
