--- a/index.html
+++ b/index.html
@@ -2414,12 +2414,7 @@ animation.addEventListener('DOMLoaded', () => {
     </div>
   </div>
 </footer>
-<script
-  src="https://tomos.bot/embed.js"
-  data-empresa="tomos"
-  data-bot="app-facture-mu"
-  data-floating="true">
-</script>
+<script src="https://tomos.bot/embed.js" data-empresa="tomos" data-bot="app-facture-mu"></script>
 
 </body>
 </html>
