--- a/index.html
+++ b/index.html
@@ -2414,6 +2414,6 @@ animation.addEventListener('DOMLoaded', () => {
     </div>
   </div>
 </footer>
-
+<script src="https://tomos.bot/embed.js" data-empresa="tomos" data-bot="ivachile"></script>
 </body>
 </html>
