--- a/index.html
+++ b/index.html
@@ -1827,7 +1827,7 @@
   </div>
 </section>
 
-<section class="testimonials-section" hidden>
+<section class="testimonials-section">
   <div class="container">
 
     <div class="testimonials-header">
