Add Lottie logo to use case cards

--- a/index.html
+++ b/index.html
@@ -1619,6 +1619,13 @@
   margin-bottom:14px;
 }
 
+.usecase-lottie{
+  display:inline-block;
+  width:96px;
+  height:26px;
+  vertical-align:middle;
+}
+
 .usecase-list{
   list-style:none;
   padding:0;
@@ -1927,7 +1934,7 @@
         </div>
 
         <div class="usecase-col">
-          <h4>Avec <strong>Facture.mu</strong></h4>
+          <h4>Avec <span class="usecase-lottie" data-animation="2.json" role="img" aria-label="Facture.mu"></span></h4>
           <ul class="usecase-list positive">
             <li>Données dans le cloud, accessibles partout</li>
             <li>Analyses intelligentes pour exploiter les données</li>
@@ -1955,7 +1962,7 @@
         </div>
 
         <div class="usecase-col">
-          <h4>Avec <strong>Facture.mu</strong></h4>
+          <h4>Avec <span class="usecase-lottie" data-animation="2.json" role="img" aria-label="Facture.mu"></span></h4>
           <ul class="usecase-list positive">
             <li>Facturation récurrente automatisée</li>
             <li>Envoi par email ou WhatsApp</li>
@@ -1983,7 +1990,7 @@
         </div>
 
         <div class="usecase-col">
-          <h4>Avec <strong>Facture.mu</strong></h4>
+          <h4>Avec <span class="usecase-lottie" data-animation="2.json" role="img" aria-label="Facture.mu"></span></h4>
           <ul class="usecase-list positive">
             <li>Accès partagé avec l’expert-comptable</li>
             <li>Factures scannées et centralisées</li>
@@ -2297,7 +2304,7 @@ animation.addEventListener('DOMLoaded', () => {
   
   let hasPlayedReturn = false;
   
-  animation.addEventListener('complete', () => {
+animation.addEventListener('complete', () => {
     // 🔒 empêcher double déclenchement
     if (hasPlayedReturn) {
       animation.goToAndStop(FINAL_FRAME, true);
@@ -2311,6 +2318,19 @@ animation.addEventListener('DOMLoaded', () => {
       animation.setSpeed(RETURN_SPEED);
       animation.playSegments([TURN_FRAME, FINAL_FRAME], true);
     }, HOLD_TIME);
+  });
+  const usecaseAnimations = document.querySelectorAll('.usecase-lottie');
+  usecaseAnimations.forEach((container) => {
+    lottie.loadAnimation({
+      container,
+      renderer: 'svg',
+      loop: false,
+      autoplay: true,
+      path: container.dataset.animation || '2.json',
+      rendererSettings: {
+        preserveAspectRatio: 'xMidYMid meet'
+      }
+    });
   });
 }
 
